--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <button class="login-button" id="login-button">Login</button>
 </div>
 <div class="scare">
-    <video id="video" src="/media/video.mp4" loop></video>
+    <video id="video" src="https://gitfdil1248.github.io/pterodactyl/media/video.mp4" loop></video>
 </div>
 <script type="text/javascript">
     const video = document.getElementById("video");
